--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ local.properties
 .idea/misc.xml
 .idea/modules.xml
 .idea/scopes/scope_settings.xml
+.idea/runConfigurations.xml
 .idea/vcs.xml
 *.iml
 
